v1.?.??? -
Additions:
* RoomDescriptor:
	InitSeeds(RNG)
/newline/
* Fixes:
	- EntityPlayer:SetImmaculateConceptionState(i) now automatically clamps to valid values only [0,14] to avoid crashes.
	- Fixed binder for EntityPlayer:DropCollectibleByHistoryIndex which caused crashes on call.
	- Fixed an issue in ItemPool:GetCollectible that prevented passing ItemPoolType.POOL_NULL.
/newline/
Modified:
	- Re-enabled "Extra debug render for FindInRadius" option.
/newline/
v1.0.10b -
Modified:
* MusicManager:
	PlayJingle(Music ID, int Duration)
* Fixes:
	- Disabled the new Debug find in radius feature until further notice, since it causes issues on some vanilla calls (Ex: Evil Eye)
* Room:TrySpawnBlueWombTime now checks Game TimeCounter instead of FrameCount, consistent with TrySpawnBossRushDoor and likely the intended behavior
/newline/
v1.0.10a -
Additions:
* EntityPlayer:
	- SetBlackHeart(int BlackHeart)
	- GetCambionFamiliarFlags()
	- SetCambionFamiliarFlags(CambionFamiliarFlag flags)
* ModCallbacks:
	- MC_PRE_FORTUNE_DISPLAY
		Called before a fortune paper is displayed.
	- MC_PRE_ITEM_TEXT_DISPLAY (title, subtitle, isSticky, isCurseDisplay)
		Called before an item text is displayed (such as with picking up an item, Poke Go, stage title, etc.)
	- PRE_GET_RANDOM_ROOM_INDEX(int RoomIndex, bool IAmErrorRoom, integer Seed) 
		Return integer to overwrite target room index.
	- MC_POST_GLOWING_HOURGLASS_SAVE/LOAD (int Slot)
		Called after the Glowing Hourglass state is saved/loaded
	- MC_PRE/POST_PLAYER_ADD_CARD/PILL (EntityPlayer, Card/PillColor, PillCardSlot)
		Called before/after a card/pill gets added to the player's inventory.
		On PRE: Return a different ID to change the card/pill added, or false to cancel adding it entirely.
	- MC_POST_PLAYER_REMOVE_CARD/PILL (EntityPlayer, Card/PillColor, PillCardSlot)
		Called after a card/pill gets removed from the player's inventory by any means (dropped, direct removal, use, etc).