@@ -13,8 +13,8 @@
 
 LUA_FUNCTION(Lua_RoomConfig_GetRoomByStageTypeAndVariant) {
 	int n = lua_gettop(L);
-	if (n != 4) {
-		return luaL_error(L, "Expected four parameters, got %d\n", n);
+	if (n < 3) {
+		return luaL_error(L, "Expected three parameters, got %d\n", n);
 	}
 
 	RoomConfig* roomConfig = g_Game->GetRoomConfig();
@@ -30,12 +30,12 @@ LUA_FUNCTION(Lua_RoomConfig_GetRoomByStageTypeAndVariant) {
 	}
 
 	int variant = (int)luaL_checkinteger(L, 3);
-	int difficulty = (int)luaL_checkinteger(L, 4);
-	if (difficulty < -2 || difficulty > 1) {
-		difficulty = -1;
+	int mode = (int)luaL_optinteger(L, 4, -1);
+	if (mode < -2 || mode > 1) {
+		mode = -1;
 	}
 
-	RoomConfig_Room* config = roomConfig->GetRoomByStageTypeAndVariant(stage, type, variant, difficulty);
+	RoomConfig_Room* config = roomConfig->GetRoomByStageTypeAndVariant(stage, type, variant, mode);
 	if (!config) {
 		lua_pushnil(L);
 	}
