@@ -9,7 +9,9 @@ Additions:
 	- Fixed an issue in ItemPool:GetCollectible that prevented passing ItemPoolType.POOL_NULL.
 /newline/
 Modified:
-	- Re-enabled "Extra debug render for FindInRadius" option.
+* RoomConfigHolder:
+	- GetRoomByStageTypeAndVariant(StbType, Type, Variant, Mode = -1)
+* Re-enabled "Extra debug render for FindInRadius" option.
 /newline/
 v1.0.10b -
 Modified:
